--- a/packages/web/app/blog/[postSlug]/page.module.css
+++ b/packages/web/app/blog/[postSlug]/page.module.css
@@ -2,8 +2,7 @@
   width: 100%;
   grid-column: 1 / -1;
   background: var(--color-background-accent);
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding: 2rem;
 }
 
 .heroWrapper {
@@ -27,25 +26,18 @@
 
 .main {
   position: relative;
-  display: grid;
-  grid-template-columns: minmax(auto, 65ch) 260px;
-  grid-template-rows: 1fr;
-  grid-template-areas: 'article sidebar';
-  column-gap: 5rem;
-  isolation: isolate;
-  width: 100%;
+  max-width: 65ch;
+  margin: 0 auto;
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
 
 .article {
-  grid-area: article;
   font-size: calc(18 / 16 * 1rem);
 }
 
 .aside {
   display: none;
-  grid-area: sidebar;
   font-size: calc(14 / 16 * 1rem);
 }
 
@@ -87,11 +79,26 @@
   align-items: flex-end;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 60rem) {
+  .main {
+    display: grid;
+    grid-template-columns: minmax(auto, 65ch) 260px;
+    grid-template-rows: 1fr;
+    grid-template-areas: 'article sidebar';
+    column-gap: 4rem;
+    max-width: revert;
+    margin: revert;
+  }
+
+  .article {
+    grid-area: article;
+  }
+
   .aside {
     display: block;
     position: sticky;
     top: 3rem;
     align-self: start;
+    grid-area: sidebar;
   }
 }
