--- a/packages/web/components/MobileMenu/MobileMenu.module.css
+++ b/packages/web/components/MobileMenu/MobileMenu.module.css
@@ -27,9 +27,6 @@
   justify-content: space-between;
 }
 
-.mainMobileNav {
-}
-
 .mobileNavItem {
   display: block;
   position: relative;
